Mobile version added

--- a/index.html
+++ b/index.html
@@ -11,17 +11,24 @@
     <header>
       <nav>
         <div class="logo"><h3>Header Logo</h3></div>
+        <a href="#" class="toggle">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
         <div class="nav-links">
-          <a href="#">header link one</a>
-          <a href="#">header link two</a>
-          <a href="#">header link three</a>
+          <ul>
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
+          </ul>
         </div>
       </nav>
       <div class="header-section">
         <div id="title">
           <h2>This website is awesome</h2>
           <p>
-            This website has some text that goes here under the main title. It`s
+            This website has some text that goes here under the main title. It's
             a smaller font and the color is lower contrast.
           </p>
           <button>Sign up</button>
@@ -66,5 +73,6 @@
       <div id="sign-up-button"><button>Sign up</button></div>
     </div>
     <footer><small>Copyright &copy;</small></footer>
+    <script src="index.js"></script>
   </body>
 </html>
