--- a/index.html
+++ b/index.html
@@ -18,57 +18,62 @@
         </a>
         <div class="nav-links">
           <ul>
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="#">New quotes</a></li>
+            <li><a href="contact.html">Contact us</a></li>
           </ul>
         </div>
       </nav>
       <div class="header-section">
         <div id="title">
-          <h2>This website is awesome</h2>
+          <h2>Smart quotes by politicians</h2>
           <p>
-            This website has some text that goes here under the main title. It's
-            a smaller font and the color is lower contrast.
+            A collection of quotes by different politicians that you will get
+            inspired by or laugh at.
           </p>
           <button>Sign up</button>
         </div>
-        <div id="image"><span>This is a placeholder for an image</span></div>
+        <div id="image">
+          <span>This is a placeholder for an image</span>
+          <!-- <img
+            src="/images/finnish-president.jpg"
+            alt="picture-of-finnish-president"
+          /> -->
+        </div>
       </div>
     </header>
     <div class="information">
-      <h3>Some random information.</h3>
+      <h3>Open and learn more!</h3>
       <div class="information-options">
         <div id="card">
           <div class="img-placeholder">image</div>
-          <p>this is some subtext under an illustration or image</p>
+          <p>Presidents</p>
         </div>
         <div id="card">
           <div class="img-placeholder">image</div>
-          <p>this is some subtext under an illustration or image</p>
+          <p>Prime ministers</p>
         </div>
         <div id="card">
           <div class="img-placeholder">image</div>
-          <p>this is some subtext under an illustration or image</p>
+          <p>Other politicians</p>
         </div>
         <div id="card">
           <div class="img-placeholder">image</div>
-          <p>this is some subtext under an illustration or image</p>
+          <p>Other public figures</p>
         </div>
       </div>
     </div>
     <div class="quote-section">
       <p>
-        This is an inspiring quote, or a testimonial from a customer. Maybe it`s
-        just filling up space, or maybe people will actually read it. Who knows?
-        All I know is that it looks nice.
+        Darkness does not disappear on its own. If we want the course of events
+        to alter, we have to take action.
       </p>
-      <p id="quote-author-name">- Thor</p>
+      <p id="quote-author-name">- Finnish President</p>
     </div>
     <div class="action-call-section">
       <div id="call">
-        <h4>Call for action! It's time!</h4>
-        <p>Sign up for our product by clicking that button right over there!</p>
+        <h4>Help us to discover more quotes!</h4>
+        <p>Sign up by clicking that button right over there!</p>
       </div>
       <div id="sign-up-button"><button>Sign up</button></div>
     </div>
