--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,14 @@
         </div>
       </nav>
     </header>
+    <div>
+      <form class="contact-form">
+        <label for="email">E-mail</label>
+        <input type="email" id="email" />
+        <textarea></textarea>
+        <button>Send</button>
+      </form>
+    </div>
     <footer><small>Copyright &copy;</small></footer>
   </body>
 </html>
