--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Awesome website</title>
   </head>
   <body>
-   
       <nav>
         <div class="logo"><h3>Header Logo</h3></div>
         <a href="#" class="toggle">
@@ -43,7 +42,7 @@
         </div>
       </div>
     </header>
-    <div class="information">
+    <section class="information">
       <h3>Open and learn more!</h3>
       <div class="information-options">
         <div id="card">
@@ -63,21 +62,21 @@
           <p>Other public figures</p>
         </div>
       </div>
-    </div>
-    <div class="quote-section">
+    </section>
+    <section class="quote-section">
       <p>
         Darkness does not disappear on its own. If we want the course of events
         to alter, we have to take action.
       </p>
       <p id="quote-author-name">- Finnish President</p>
-    </div>
-    <div class="action-call-section">
+    </section>
+    <section class="action-call-section">
       <div id="call">
         <h4>Help us to discover more quotes!</h4>
         <p>Sign up by clicking that button right over there!</p>
       </div>
       <div id="sign-up-button"><button>Sign up</button></div>
-    </div>
+    </section>
     <footer><small>Copyright &copy;</small></footer>
     <script src="index.js"></script>
   </body>
