--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </div>
       </div>
     </header>
+    <main>
     <section class="information">
       <h3>Open and learn more!</h3>
       <div class="information-options">
@@ -77,6 +78,7 @@
       </div>
       <div id="sign-up-button"><button>Sign up</button></div>
     </section>
+    </main>
     <footer><small>Copyright &copy;</small></footer>
     <script src="index.js"></script>
   </body>
