More styles and mobile view for two other pages

--- a/about.html
+++ b/about.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Awesome website</title>
   </head>
   <body>
-      <nav>
-        <div class="logo"><h3>Header Logo</h3></div>
-        <a href="#" class="toggle">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </a>
-        <div class="nav-links">
-          <ul>
-            <li><a href="about.html">About</a></li>
-            <li><a href="#">New quotes</a></li>
-            <li><a href="contact.html">Contact us</a></li>
-          </ul>
-        </div>
-      </nav>
+    <nav>
+      <div class="logo">
+        <a href="index.html"><h3>Header Logo</h3></a>
+      </div>
+      <a href="#" class="toggle">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </a>
+      <div class="nav-links">
+        <ul>
+          <li><a href="about.html">About</a></li>
+          <li><a href="#">New quotes</a></li>
+          <li><a href="contact.html">Contact us</a></li>
+        </ul>
+      </div>
+    </nav>
     <div class="about">
+      <h3>About the project</h3>
       <img src="images/politicians.jpg" alt="picture-of-a-politician" />
       <p>
         This website is a place we gather the most deep or funny quotes from
-        politicians and different public figures. Anyone can join and
-        contribute!
+        politicians and different public figures. Anyone can
+        <strong>join</strong> and <strong>contribute</strong>!
       </p>
     </div>
     <footer><small>Copyright &copy;</small></footer>
