--- a/about.html
+++ b/about.html
@@ -35,5 +35,6 @@
       </p>
     </div>
     <footer><small>Copyright &copy;</small></footer>
+    <script src="index.js"></script>
   </body>
 </html>
