--- a/contact.html
+++ b/contact.html
@@ -35,5 +35,6 @@
       </form>
     </section>
     <footer><small>Copyright &copy;</small></footer>
+    <script src="index.js"></script>
   </body>
 </html>
